Actions
Bug #12541
closedsgs: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
cc1: warnings being treated as errors ../common/cache_a.out.c: In function 'ask_db': ../common/cache_a.out.c:85: error: assignment makes integer from pointer without a cast ../common/cache_a.out.c: In function 'find_so': ../common/cache_a.out.c:248: error: comparison between pointer and integer ../common/cache_a.out.c:281: error: comparison between pointer and integer *** Error code 1 dmake: Fatal error: Command failed for target `pics/cache_a.out.o' Current working directory /code/illumos-gate/usr/src/cmd/sgs/rtld/sparc cc1: warnings being treated as errors ../common/a.out.c: In function 'aout_find_com': ../common/a.out.c:360: error: comparison between pointer and integer ../common/a.out.c: In function 'aout_findsb': ../common/a.out.c:423: error: comparison between pointer and integer *** Error code 1 dmake: Warning: Command failed for target `pics/a.out.o' Current working directory /code/illumos-gate/usr/src/cmd/sgs/rtld/sparc
Testing done: build/install/boot. on both sparc and x86.
Related issues
Updated by Toomas Soome almost 2 years ago
- Subject changed from sgs: NULL pointer errors to sgs: smatch and NULL pointer errors
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c686756220120076a07be0dcce54be698101a3d1
commit c686756220120076a07be0dcce54be698101a3d1 Author: Toomas Soome <tsoome@me.com> Date: 2020-06-19T20:20:07.000Z 12541 sgs: smatch and NULL pointer errors Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Dan McDonald <danmcd@joyent.com>
Updated by Toomas Soome over 1 year ago
- Related to Bug #10266: NULL pointer constant issues in sgs/librtld_db added
Actions