12541 sgs: smatch and NULL pointer errors Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Dan McDonald <danmcd@joyent.com>